# sardips

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  index.html  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/dialogue/: main.dialogue.ron
assets/foods/: complete.foods.ron
assets/pets/: complete.pets.ron
assets/text/: main.text_database.ron
common/: Cargo.toml
common/src/: age.rs  assets.rs  debug.rs  dynamic_dialogue.rs  fact_update.rs  game_zone.rs  interaction.rs  lib.rs  money.rs  name.rs  palettes.rs  player.rs  sardip_save.rs  simulation.rs  stock_market.rs  text_database.rs  text_translation.rs  thinking.rs  velocity.rs
common/src/food/: core.rs  preferences.rs  template.rs
common/src/minigames/: mod.rs  rhythm_template.rs  sprint.rs  translate_wordbank.rs
common/src/pet/: breeding.rs  core.rs  evolve.rs  fun.rs  hunger.rs  mood.rs  move_towards.rs  pet_ai.rs  poop.rs  template.rs  view.rs  wonder.rs
common/src/scenes/: dipdex_scene.rs  food_buy_scene.rs  info_panel.rs  load_view_screen.rs  loading.rs  main_menu.rs  minigame_scene.rs  template_scene.rs  view_screen.rs
common/src/tools/: core.rs  poop_scooper.rs
core/: Cargo.toml
core/src/: accessory_core.rs  age_core.rs  assets.rs  autoscroll.rs  breeding_core.rs  button_hover.rs  color_utils.rs  food_core.rs  fun_core.rs  hunger_core.rs  lib.rs  loading.rs  money_core.rs  mood_core.rs  move_towards.rs  name.rs  particles.rs  persistent_id.rs  pet_core.rs  rand_utils.rs  rotate_static.rs  shrink.rs  sounds.rs  sprite_utils.rs  text_database.rs  text_translation.rs  ui_utils.rs  velocity.rs  view.rs  wrapped_vec.rs
core/src/minigames_core/: mod.rs  rhythm_template.rs  translate_wordbank.rs
fact_db/: Cargo.toml
fact_db/src/: lib.rs  parse.rs
minigames/endless_shooter/: Cargo.toml
minigames/endless_shooter/src/: lib.rs
minigames/four_in_row/: Cargo.toml
minigames/four_in_row/src/: lib.rs
minigames/higher_lower/: Cargo.toml
minigames/higher_lower/src/: lib.rs
minigames/rect_clash/: Cargo.toml
minigames/rect_clash/src/: lib.rs  templates.rs
minigames/rhythm/: Cargo.toml
minigames/rhythm/src/: lib.rs  palette.rs
minigames/snake/: Cargo.toml
minigames/snake/src/: lib.rs
minigames/template/: Cargo.toml
minigames/template/src/: lib.rs
minigames/tic_tac_toe/: Cargo.toml
minigames/tic_tac_toe/src/: lib.rs
minigames/translate/: Cargo.toml
minigames/translate/src/: lib.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
run/: Cargo.toml  Trunk.toml  build_web.sh  index.html
run/assets/foods/: complete.foods.ron
run/assets/pets/: complete.pets.ron
run/assets/text/: main.text_database.ron
run/assets/translate/: main.word_bank.ron
run/src/: lib.rs  main.rs
sardips/: Cargo.toml
sardips/src/: age.rs  anime.rs  debug.rs  fact_update.rs  inventory.rs  layering.rs  lib.rs  money.rs  name.rs  palettes.rs  pet_display.rs  player.rs  sardip_save.rs  simulation.rs  stock_market.rs  stock_ticker.rs
sardips/src/accessory/: mod.rs  view.rs
sardips/src/food/: core.rs  mod.rs  preferences.rs  template.rs  view.rs
sardips/src/minigames/: mod.rs
sardips/src/pet/: breeding.rs  core.rs  dipdex.rs  evolve.rs  fun.rs  hunger.rs  mod.rs  mood.rs  pet_ai.rs  poop.rs  template.rs  view.rs  wonder.rs
sardips/src/scenes/: buy_accessory.rs  dipdex_scene.rs  food_buy_scene.rs  info_panel.rs  load_view_screen.rs  main_menu.rs  minigame_scene.rs  mod.rs  stock_scene.rs  template_scene.rs  view_screen.rs
sardips/src/tools/: core.rs  poop_scooper.rs
shared_deps/: Cargo.toml
shared_deps/src/: lib.rs
src/: age.rs  assets.rs  autoscroll.rs  button_hover.rs  debug.rs  dynamic_dialogue.rs  facts.rs  game_zone.rs  interaction.rs  layering.rs  lib.rs  main.rs  money.rs  name.rs  old_main.rs  palettes.rs  player.rs  sardip_save.rs  simulation.rs  sounds.rs  stock_market.rs  text_database.rs  text_translation.rs  thinking.rs  velocity.rs  view.rs
src/food/: core.rs  mod.rs  preferences.rs  template.rs  view.rs
src/minigames/: four_in_row.rs  higher_lower.rs  mod.rs  sprint.rs  template.rs  tic_tac_toe.rs
src/pet/: breeding.rs  core.rs  dipdex.rs  evolve.rs  fun.rs  hunger.rs  mod.rs  mood.rs  move_towards.rs  pet_ai.rs  poop.rs  sardex.rs  template.rs  wonder.rs
src/scenes/: dipdex_scene.rs  food_buy_scene.rs  info_panel.rs  load_view_screen.rs  loading.rs  main_menu.rs  minigame_scene.rs  mod.rs  template_scene.rs  view_screen.rs
src/tools/: mod.rs  poop_scooper.rs
text_keys/: Cargo.toml
text_keys/src/: lib.rs
