[workspace]
resolver = "2"
members = [
    "common",
    "minigames/four_in_row",
    "minigames/endless_shooter",
    "minigames/tic_tac_toe",
    "minigames/higher_lower",
    "minigames/rhythm",
    "minigames/translate",
    "run",
    "text_keys",
    "fact_db",
    "shared_deps",
]
default-members = ["run"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
debug = true
opt-level = 0
