[package]
name = "sardips"
version = "0.2.0"
publish = false
authors = ["Paul Sarda paul@sarda.dev"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[features]
dev = ["bevy/dynamic_linking"]


[dependencies]
text_keys = { path = "../text_keys" }
fact_db = { path = "../fact_db" }
shared_deps = { path = "../shared_deps" }
bevy = { version = "0.14.2", default-features = false, features = [
    "serialize",
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "jpeg",

    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_asset_loader = { version = "0.21", features = [
    "2d",
    "standard_dynamic_assets",
] }
moonshine-save = { git = "https://github.com/sardap/moonshine_save.git", branch = "main" }

rand = { version = "0.8.5" }
webbrowser = { version = "0.8", features = ["hardened"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
strum = { version = "0.26.1", features = ["strum_macros"] }
strum_macros = "0.26.1"
ron = "0.8"

winit = { version = "0.30", default-features = false }
image = { version = "0.24", default-features = false }
maplit = "1.0.2"
chrono = { version = "0.4.37", features = ["serde"] }
bincode = "1.3.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
regex = "1.10.4"
weighted_rand = "0.4.2"
num-traits = "0.2.19"
