[package]
name = "sardips-run"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
debug = true
opt-level = 0

[build-dependencies]
embed-resource = "1"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "serialize",
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "jpeg",

    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
shared_deps = { path = "../shared_deps" }
sardips = { path = "../common" }
sardips_endless_shooter = { path = "../minigames/endless_shooter" }
sardips_four_in_row = { path = "../minigames/four_in_row" }
sardips_tic_tac_toe = { path = "../minigames/tic_tac_toe" }
sardips_higher_lower = { path = "../minigames/higher_lower" }
sardips_rhythm = { path = "../minigames/rhythm" }
