[package]
name = "sardips-run"
version = "0.7.0"
edition = "2021"

[build-dependencies]
embed-resource = "1"

# [features]
# dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
shared_deps = { path = "../shared_deps" }
sardips = { path = "../sardips" }
sardips_endless_shooter = { path = "../minigames/endless_shooter" }
sardips_four_in_row = { path = "../minigames/four_in_row" }
sardips_tic_tac_toe = { path = "../minigames/tic_tac_toe" }
sardips_higher_lower = { path = "../minigames/higher_lower" }
sardips_rhythm = { path = "../minigames/rhythm" }
sardips_translate = { path = "../minigames/translate" }
sardips_rect_clash = { path = "../minigames/rect_clash" }
sardips_snake = { path = "../minigames/snake" }
