[package]
name = "shared_deps"
version = "0.4.0"
edition = "2021"

[dependencies]
bevy_kira_audio = { version = "0.20", features = ["wav", "mp3"] }
bevy_common_assets = { version = "0.11", features = ["toml"] }
bevy_prototype_lyon = "0.12"
bevy_turborand = "0.9"
bevy-parallax = { git = "https://github.com/septum/bevy-parallax.git", branch = "bevy-0.14" }
moonshine-save = { git = "https://github.com/sardap/moonshine_save.git", branch = "main" }
avian2d = { version = "0.1.2", features = ["simd"] }

rand = { version = "0.8.5" }
webbrowser = { version = "0.8", features = ["hardened"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
strum = { version = "0.26.1", features = ["strum_macros"] }
strum_macros = "0.26.1"
ron = "0.8"

winit = { version = "0.30", default-features = false }
image = { version = "0.24", default-features = false }
maplit = "1.0.2"
chrono = { version = "0.4.37", features = ["serde"] }
bincode = "1.3.3"
fxhash = "0.2.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
regex = "1.10.4"
weighted_rand = "0.4.2"
num-traits = "0.2.19"
