[package]
name = "shared_deps"
version = "0.5.0"
edition = "2021"

[dependencies]
bevy_kira_audio = { version = "0.20", features = ["wav", "mp3"] }
bevy_common_assets = { version = "0.11", features = ["toml"] }
bevy_prototype_lyon = "0.12"
bevy_turborand = "0.9"
bevy-parallax = { version = "0.10" }
moonshine-save = { git = "https://github.com/sardap/moonshine_save.git", branch = "main" }
avian2d = { version = "0.1.2", features = ["simd"] }
avian3d = "0.1.2"
bevy_async_task = "0.2.0"
bevy_rts_camera = "0.8"

rand = { version = "0.8.5" }
webbrowser = { version = "0.8", features = ["hardened"] }
ron = "0.8"

image = { version = "0.24", default-features = false }
chrono = { version = "0.4.37", features = ["serde"] }
bincode = "1.3.3"
fxhash = "0.2.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
regex = "1.10.4"
weighted_rand = "0.4.2"
num-traits = "0.2.19"
async-std = "1.13.0"
