[package]
name = "sardips_rhythm"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_deps = { path = "../../shared_deps" }
sardips = { path = "../../common" }
text_keys = { path = "../../text_keys" }
bevy = { version = "0.14.2", default-features = false }
serde = { version = "1.0.197", features = ["serde_derive"] }
